Fixed spacing and animations on home screen

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -56,7 +56,22 @@ button,
 .mat-spinner circle {
   stroke: $text_secondary_color;
 }
-
 .avatar-name {
   font-family: ICTHofmannRegular;
 }
+
+.container-background {
+  position: relative;
+}
+.container-background:before {
+  content: '';
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-image: url('assets/background/io_rutemoenster-inverted.png');
+  background-size: cover;
+  background-color: black;
+}
+
